--- a/src/components/ventanas/ventanaStyle.css
+++ b/src/components/ventanas/ventanaStyle.css
@@ -12,7 +12,7 @@
     overflow: hidden;
 }
 .ventana-msj{
-    transform:rotate(45deg);
+    /* transform:rotate(45deg); */
     background-color: var(--ventana-text-active-color);
 }
 .new-box{
@@ -20,8 +20,8 @@
     min-width: 200px;
     min-height: 200px;
     border-radius: 50%;
-    width: 50vw;
-    transform:rotate(-45deg);
+    /* width: 50vw; */
+    /* transform:rotate(-45deg); */
     display: flex;
     flex-direction: column;
     justify-content: center;
