--- a/src/components/logoViejo/logo.css
+++ b/src/components/logoViejo/logo.css
@@ -1,7 +1,7 @@
 .main-logo{
-/* position: absolute;
+position: absolute;
 left: 3%;
-top:3%; */
+top:3%;
 }
 .outer-logo{
     height: 40px;
@@ -25,9 +25,9 @@ top:3%; */
      
     }
     .main-logo{
-        /* position: absolute;
+        position: absolute;
         left: 3%;
-        top:2%; */
+        top:2%;
         }
   
 }
