--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -7,6 +7,7 @@
 .d5{
     font-family: 'Raleway', sans-serif;
     height: 100%;
+    font-size: 0.9rem;
 }
 .navbar-brand:hover{
     color:var(--main-text-active-color)
