--- a/src/components/listaProductos/listaProductos.css
+++ b/src/components/listaProductos/listaProductos.css
@@ -1,17 +1,12 @@
 .main-product-list-div{
-   padding-top: 2rem;
+   /* padding-top: 2rem; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 95%;
   
 }
-.dist-filtros{
-   display: flex;
-   justify-content: space-evenly;
-   align-items: center;
-   
-}
+
 
 @media (min-width: 500px) {
    .main-product-list-div{
